(Work-in-progress): bug fixes.

* New API functions: model/isEntityOrphan

4.14.1 (September 2, 2025): further improvement of return value of boolean
operations; bug fixes.

4.14.0 (July 3, 2025): improved return value of boolean operations; improved
ONELAB parameter GUI; improved XAO export with mesh sizes; improved unrolled GEO
export to handle OCC geometries; new Step() built-in parser function; fixed
occ/getClosestPoint for OCC surfaces; renamed Windows DLL import library from
.lib to .dll.lib; official binary builds now use OCC 7.8, and Linux and Windows
binary builds use FLTK 1.3 (instead of FLTK 1.4, which introduced performance
regressions in OpenGL rendering); bug fixes.

* New API functions: model/getEntityProperties, model/getPhysicalGroupsEntities

* Incompatible API changes: new optional arguments to occ/fillet2D; renamed
  model/getType as model/getEntityType; renamed mesh/triangulate as
  algorithm/triangulate and add new optional argument (edges); renamed
  mesh/tetrahedralize as algorithm/tetrahedralize

4.13.1 (May 24, 2024): fix regression introduced in 4.13.0 when reading binary
.msh files with post-processing data; new read-only Mesh.MinQuality updated
after meshing pipeline; occ/addSurfaceFilling new defaults to degree=2 for
consistency with .geo files; small bug fixes.

4.13.0 (May 7, 2024): added support for importing and exporting XAO files; new
options for OCC boolean operations (OCCBooleanCheckInverted, OCCBooleanGlue,
OCCBooleanNonDestructive, OCCBooleanSimplify); new OCC operations (2D fillets
and chamfers, distance, defeature); new quasi-transfinite 2d meshes (with fans);
small API additions; revert Crack plugin logic to version 4.10.1; bug fixes.

* New API functions: occ/getDistance, occ/fillet2D, occ/chamfer2D,
  occ/offsetCurve, occ/defeature, mesh/removeElements, option/restoreDefaults,
  logger/getMemory, logger/getTotalMemory.

4.12.2 (January 21, 2024): small bug fixes.

4.12.1 (January 11, 2024): small bug fixes.
